# Tamago

./: .env.example  .gitignore  LICENSE.md  README.md  init_db.py  pyproject.toml  requirements.txt  start_server.py  test-supabase.py
.cursor/rules/: exceptions.mdc
doc/: PROJECT_STRUCTURE.md  ROUTER_TEMPLATE.md  diary.md
src/app/: __init__.py  main.py
src/app/common/: __init__.py  deps.py  exceptions.py  responses.py
src/app/core/: __init__.py  config.py  database.py
src/app/orders/: crud.py  enums.py  models.py  router.py  schemas.py  summary.md
src/cheflink.egg-info/: PKG-INFO  SOURCES.txt
src/tamago.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py  test_database.py
