[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamago"
version = "0.1.0"
description = "Tamago"
authors = [{name = "Yuhshun Chen", email = "yuhshun@chen.zone"}]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "python-dotenv",
    "psycopg2-binary",
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
